Fix EU download link alignment

--- a/src/implementations/vanilla/components/file/_file.scss
+++ b/src/implementations/vanilla/components/file/_file.scss
@@ -283,6 +283,7 @@ $_image-width: null !default;
   }
 
   .ecl-file__download {
+    align-self: center;
     margin-top: 0;
   }
 
